--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,32 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.smiley-handle {
+  position: absolute;
+  margin-left: -7px;
+  margin-top: -16px;
+  width: 14px;
+  height: 14px;
+  cursor: pointer;
+  cursor: -webkit-grab;
+  cursor: grab;
+  z-index: 2;
+
+  font-size: 2em;
+}
+
+.rc-slider {
+  margin: 2em auto;
+  max-width: 400px;
+}
+
+.rc-slider-track {
+  background-color: #eb2f06;
+  height: 6px;
+}
+
+.feedback-status {
+  line-height: 0.8em;
+  text-align: center;
+}
